kube/nginx-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: nextjs-web-ingress
  namespace: nextjs-web-ns # Change this
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 5000m
spec:
  tls:
    - hosts:
      - nextjs.codefactory.site # [TODO] Change this to your host
      secretName: nextjs-codefactory-site-tls # [TODO] Change this to anything
  rules:
  - host: nextjs.codefactory.site # [TODO] Change this to your host
    http:
      paths:
      - path: /
        backend:
          serviceName: nextjs-web-service
          servicePort: 80
